# monroe

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  shell.nix
.github/workflows/: cargo-test.yml  rust.yml
benches/: ring.rs
benches/actix/: ring.rs
benches/monroe/: ring.rs
inbox/: Cargo.toml
inbox/benches/: basic.rs
inbox/src/: hook.rs  lib.rs  receiver.rs  sender.rs  signal.rs
src/: actor.rs  address.rs  context.rs  handle.rs  lib.rs  supervisor.rs
src/actor/: mod.rs  new.rs  stream.rs
src/mailbox/: channel.rs  envelope.rs  messages.rs  mod.rs  stream.rs
src/system/: actor.rs  broker.rs  handle.rs  mod.rs  root.rs
