[package]
name = "monroe"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "An asynchronous actor model implementation based on tokio"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kronos-project/monroe.git"
categories = ["network-programming", "asynchronous"]
keywords = ["actor", "library", "async", "futures", "tokio"]
edition = "2021"

[dependencies]
monroe-inbox = { path = "inbox", version = "0.1.0" }

futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "sync"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
futures = "0.3.21"
tokio = { version = "1", features = ["rt", "macros", "time"] }
waker-fn = "1.1.0"

[workspace]
members = ["inbox"]
