[package]
name = "monroe"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "An asynchronous actor model implementation based on tokio"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kronos-project/monroe.git"
categories = ["network-programming", "asynchronous"]
keywords = ["actor", "library", "async", "futures", "tokio"]
edition = "2021"

[dependencies]
monroe-inbox = { path = "inbox", version = "0.1.0" }

futures-core = "0.3"
futures-util = "0.3"
rustc-hash = "1.1"
tokio = { version = "1", features = ["rt", "sync"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
futures = "0.3.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
waker-fn = "1.1.0"
# Benchmarks
criterion = { version = "0.3.5", features = ["async_tokio"] }
xactor = "0.7.11"
actix = "0.13.0"
heph = "0.4.0"

[workspace]
members = ["inbox"]

[[bench]]
name = "ring"
harness = false
