[package]
name = "monroe-inbox"
version = "0.1.0"
description = "An optimized mpsc channel used in the monroe actor system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kronos-project/monroe.git"
keywords = ["mpsc", "fifo", "channel", "thread"]
categories = ["concurrency", "data-structures"]
edition = "2021"

[dependencies]
futures-core = "0.3.21"
parking_lot = "0.12.0"
pin-project-lite = "0.2.8"
spin = { version = "0.9.2", features = ["mutex"] }
