[package]
name = "monroe-inbox"
version = "0.1.0"
description = "An optimized mpsc channel used in the monroe actor system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kronos-project/monroe.git"
keywords = ["mpsc", "fifo", "channel", "thread"]
categories = ["concurrency", "data-structures"]
edition = "2021"

[dependencies]
futures-core = "0.3.21"
parking_lot = "0.12.0"
pin-project-lite = "0.2.8"
spin = { version = "0.9.2", features = ["mutex"] }

[dev-dependencies]
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "time"] }
waker-fn = "1.1.0"
# required for benchmarks
criterion = { version = "0.3.5", features = ["async_tokio"] }
flume = "0.10.12"
async-trait = "0.1.53"
paste = "1.0.7"

[[bench]]
name = "basic"
harness = false
